[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokencost"
version = "0.1.0"
description = "LLM Token Cost Calculator & Visualizer — count tokens, estimate costs, compare models from the CLI"
authors = [{name = "alvabillwu", email = "alvabill@outlook.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]

[project.scripts]
tokencost = "tokencost.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
all-tokenizers = ["tiktoken", "anthropic"]
